# notif

./: .SRCINFO  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  PLAN.md  README.md  final_check  notifd.service
crates/notif-config/: Cargo.toml
crates/notif-config/examples/: config.toml
crates/notif-config/src/: lib.rs
crates/notif-core/: Cargo.toml
crates/notif-core/examples/: headless_daemon.rs
crates/notif-core/src/: lib.rs
crates/notif-core/tests/manual/: core_smoke.sh
crates/notif-dbus/: Cargo.toml
crates/notif-dbus/examples/: echo_daemon.rs
crates/notif-dbus/src/: hints.rs  lib.rs
crates/notif-dbus/tests/manual/: dbus_smoke.sh
crates/notif-ipc/: Cargo.toml
crates/notif-ipc/src/: lib.rs
crates/notif-render/: Cargo.toml
crates/notif-render/src/: lib.rs  skia_renderer.rs
crates/notif-render/tests/: golden_tests.rs
crates/notif-types/: Cargo.toml
crates/notif-types/src/: config.rs  lib.rs
crates/notif-wl/: Cargo.toml
crates/notif-wl/examples/: wl_demo.rs
crates/notif-wl/src/: lib.rs
