[package]
name = "notif-config"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
notif-types = { path = "../notif-types" }
serde = { workspace = true }
toml = { workspace = true }
async-channel = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
inotify = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
