[package]
name = "notif-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
notif-types = { path = "../notif-types" }
notif-config = { path = "../notif-config" }
async-channel = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
log = { workspace = true }

[dev-dependencies]
notif-dbus = { path = "../notif-dbus" }
async-io = { workspace = true }
async-executor = "1"
env_logger = "0.11"

[[example]]
name = "headless_daemon"
