[package]
name = "notif-ipc"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
notif-types = { path = "../notif-types" }
async-channel = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
async-executor = "1"
tempfile = { workspace = true }
