[package]
name = "notif-wl"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
notif-types = { path = "../notif-types" }
notif-config = { path = "../notif-config" }
notif-render = { path = "../notif-render" }

smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
wayland-backend = { workspace = true }

async-channel = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
async-executor = "1"
